[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "propellerads-mcp"
version = "1.0.0"
description = "MCP (Model Context Protocol) server for PropellerAds - Democratizing programmatic advertising with AI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Jann Afta", email = "contact@jannafta.com" }
]
keywords = [
    "propellerads", "mcp", "programmatic", "dsp", "ssp", "adtech", "adops",
    "performance", "igaming", "media-buying", "rtb", "mmp", "voluum"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/JanNafta/propellerads-mcp"
Documentation = "https://github.com/JanNafta/propellerads-mcp#readme"
Repository = "https://github.com/JanNafta/propellerads-mcp"
Author = "https://www.jannafta.com/ia"
LinkedIn = "https://www.linkedin.com/in/jannafta-programmatic-performance-dsp-ssp-rtb/"

[project.scripts]
propellerads-mcp = "propellerads_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/propellerads_mcp"]
